<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="12dp"
    tools:context=".datafeed.DataFeedFragment">

    <TextView
        android:id="@+id/text_view_code_btc"
        style="@style/Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_price_btc"
        style="@style/Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9,050" />

    <TextView
        android:id="@+id/text_view_code_eth"
        style="@style/Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eth_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_code_btc" />

    <TextView
        android:id="@+id/text_view_price_eth"
        style="@style/Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_code_eth"
        tools:text="9,050" />

</androidx.constraintlayout.widget.ConstraintLayout>