<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="24dp">

        <include
            android:id="@+id/include_social_media"
            layout="@layout/layout_social_media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_left"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="8dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/text_view_label_or"
            app:layout_constraintEnd_toStartOf="@id/text_view_label_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_label_or" />

        <View
            android:id="@+id/view_right"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/text_view_label_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_label_or"
            app:layout_constraintTop_toTopOf="@id/text_view_label_or" />

        <TextView
            android:id="@+id/text_view_label_or"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_or"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@id/view_right"
            app:layout_constraintStart_toEndOf="@id/view_left"
            app:layout_constraintTop_toBottomOf="@+id/include_social_media" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_username_or_email"
            app:layout_constraintTop_toBottomOf="@id/text_view_label_or">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_forgot_password"
            style="@style/Body2.Green.Bold"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/label_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingVertical="12dp"
            android:text="@string/label_login"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password" />

        <Button
            android:id="@+id/button_login_fingerprint"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="12dp"
            android:text="@string/label_login_fingerprint"
            android:textAllCaps="false"
            android:textColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:strokeColor="@color/green" />

        <TextView
            style="@style/Body1.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/label_register_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_login_fingerprint"
            app:layout_constraintStart_toStartOf="@+id/button_login_fingerprint"
            app:layout_constraintTop_toBottomOf="@id/button_login_fingerprint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>